--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,7 @@
   "customizations": {
     "vscode": {
       "settings": {
-        "python.defaultInterpreterPath": "/usr/local/bin/python",
+        "python.defaultInterpreterPath": "/usr/local/python/current/bin/python",
         "python.analysis.typeCheckingMode": "basic",
         "python.testing.pytestEnabled": true,
         "python.testing.unittestEnabled": false,
@@ -22,6 +22,7 @@
         }
       },
       "extensions": [
+        "openai.chatgpt",
         "ms-python.python",
         "ms-python.vscode-pylance",
         "ms-python.black-formatter"
